--- a/resources/ObjectExternal/demovjs/STYLES.less
+++ b/resources/ObjectExternal/demovjs/STYLES.less
@@ -35,12 +35,22 @@
 	.text-muted {
 		color: #777;
 	}
+	.text-documentation {
+		max-height: 300px;
+		overflow: auto;
+		color: #555;
+	}
 	h3.text-muted img {
 		max-width: 95%;
-		border: solid 2px #eee;
-		background: #f0f0f0;
-		border-radius: 10px;
+		background: #e2e7ed;
+		box-shadow: 5px 5px 8px #888;
 		padding: 10px;
 		margin: 10px;
+	}
+	.product {
+		background: #fafaff;
+		box-shadow: 5px 5px 8px #888;
+		padding: 15px;
+		margin-bottom: 10px;
 	}
 }
