--- a/resources/ObjectExternal/demovjs/STYLES.less
+++ b/resources/ObjectExternal/demovjs/STYLES.less
@@ -36,7 +36,6 @@
 		color: #777;
 	}
 	.text-documentation {
-		max-height: 300px;
 		overflow: auto;
 		color: #555;
 	}
@@ -52,5 +51,8 @@
 		box-shadow: 5px 5px 8px #888;
 		padding: 15px;
 		margin-bottom: 10px;
+	}
+	.clickable {
+		cursor: pointer;
 	}
 }
