Vue 2 and 3 support

--- a/resources/ObjectExternal/DemoVueJSFrontend/STYLES.less
+++ b/resources/ObjectExternal/DemoVueJSFrontend/STYLES.less
@@ -13,21 +13,10 @@
 		margin-bottom: 30px;
 		overflow: hidden;
 		position: relative;
-		.cover-image {
-			position: absolute;
-			top: 0;
-			bottom: 0;
-			left: 0;
-			right: 0;
-			background-size: cover;
-			background-position: center;
-		}
-		h1 {
-			font-size: 5em;
-		}
-		h2 {
-			font-size: 2em;
-		}
+		background-size: cover;
+		background-position: center;
+		h1 { font-size: 5em; }
+		h2 { font-size: 2em; }
 	}
 	.row {
 		margin: 20px;
