--- a/resources/ObjectExternal/DemoVueJSFrontend/STYLES.less
+++ b/resources/ObjectExternal/DemoVueJSFrontend/STYLES.less
@@ -9,37 +9,42 @@
 	overflow: auto;
 	color: #555;
 	.cover {
-		padding: 50px 0;
-		margin-bottom: 30px;
+		padding: 3rem 0;
+		margin-bottom: 2rem;
 		overflow: hidden;
 		position: relative;
 		background-size: cover;
 		background-position: center;
-		h1 { font-size: 5em; }
-		h2 { font-size: 2em; }
+		h1 { font-size: 5rem; }
+		h2 { font-size: 2rem; }
 	}
 	.row {
-		margin: 20px;
+		margin: 1rem;
+	}
+	.text-primary {
+		color: #539177 !important;
 	}
 	.text-muted {
-		color: #777;
+		color: #8894a0 !important;
 	}
 	.text-documentation {
 		overflow: auto;
-		color: #555;
+		color: #8894a0;
 	}
 	h3.text-muted img {
 		max-width: 95%;
-		background: #e2e7ed;
-		box-shadow: 5px 5px 8px #888;
-		padding: 10px;
-		margin: 10px;
+		background: #fefefe;
+		border: solid .0625rem #8894a0;
+		box-shadow: .25rem .25rem .5rem #8894a0;
+		padding: .75rem;
+		margin: .75rem;
 	}
 	.product {
-		background: #fafaff;
-		box-shadow: 5px 5px 8px #888;
-		padding: 15px;
-		margin-bottom: 10px;
+		background: #fefefe;
+		border: solid .0625rem #8894a0;
+		box-shadow: .25rem .25rem .5rem #8894a0;
+		padding: 1rem;
+		margin-bottom: 1rem;
 	}
 	.clickable {
 		cursor: pointer;
@@ -48,4 +53,13 @@
 /* Position must be relative within UI */
 .objext #demovuejsfrontend {
 	position: relative;
+	background: transparent;
+	.cover {
+		border-radius: 3rem;
+	}
+	h3.text-muted img, .product {
+		border-radius: 1rem;
+		box-shadow: none;
+		background: transparent;
+	}
 }
