--- a/resources/ObjectExternal/DemoVueJSFrontend/STYLES.less
+++ b/resources/ObjectExternal/DemoVueJSFrontend/STYLES.less
@@ -31,19 +31,16 @@
 		overflow: auto;
 		color: #8894a0;
 	}
+	h3.text-muted img, .product {
+		background: #eaeefa;
+		box-shadow: .25rem .25rem .5rem #8894a0;
+		padding: 1rem;
+	}
 	h3.text-muted img {
 		max-width: 95%;
-		background: #fefefe;
-		border: solid .0625rem #8894a0;
-		box-shadow: .25rem .25rem .5rem #8894a0;
-		padding: .75rem;
 		margin: .75rem;
 	}
 	.product {
-		background: #fefefe;
-		border: solid .0625rem #8894a0;
-		box-shadow: .25rem .25rem .5rem #8894a0;
-		padding: 1rem;
 		margin-bottom: 1rem;
 	}
 	.clickable {
@@ -60,6 +57,5 @@
 	h3.text-muted img, .product {
 		border-radius: 1rem;
 		box-shadow: none;
-		background: transparent;
 	}
 }
